--- a/PetHomeAngular/src/app/secciones/organizaciones/organizacion-card/organizacion-card.component.html
+++ b/PetHomeAngular/src/app/secciones/organizaciones/organizacion-card/organizacion-card.component.html
@@ -8,7 +8,7 @@
         {{ org.descripcion }}
       </p>
       <button [routerLink]="['/detalle-organizacion', org.id]" class="button">
-              <p class="text">Ver {{mascotas.length}} mascotas →</p>
+              <p class="text" aria-label="Ver">Ver {{mascotas.length}} mascotas →</p>
             </button>
     </div>
 
