--- a/PetHomeAngular/src/app/secciones/sobre-nosotros/sobre-nosotros.component.html
+++ b/PetHomeAngular/src/app/secciones/sobre-nosotros/sobre-nosotros.component.html
@@ -23,12 +23,12 @@
           <!-- From Uiverse.io by andrew-demchenk0 -->
 
           <div class="card">
-            <div><img src="assets/img/JT.jpg"></div>
+            <div><img src="assets/img/JT.jpg" alt="JT Gallego"></div>
             <div class="card-title">JT Gallego <br>
               <span>Co-fundador</span>
             </div>
             <div class="card-socials">
-              <a href="https://github.com/jtgallego">
+              <a href="https://github.com/jtgallego" aria-label="GitHub JT Gallego">>
 
                 <button class="card-socials-btn github">
                   <svg viewBox="0 0 24 24" height="33" width="33" xmlns="http://www.w3.org/2000/svg">
@@ -38,7 +38,7 @@
                   </svg>
                 </button>
               </a>
-              <a href="https://www.linkedin.com/in/josetomasgallego/">
+              <a href="https://www.linkedin.com/in/josetomasgallego/" aria-label="LinkedIn JT Gallego">
 
                 <button class="card-socials-btn linkedin">
                   <svg height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg">
@@ -53,12 +53,12 @@
 
           <!-- From Uiverse.io by andrew-demchenk0 -->
           <div class="card">
-            <div><img src="assets/img/jesus.jpg"></div>
+            <div><img src="assets/img/jesus.jpg" alt="Jesús Mondéjar"></div>
             <div class="card-title">Jesús Mondéjar <br>
               <span>Co-fundador</span>
             </div>
             <div class="card-socials">
-              <a href="https://github.com/jesusmondejar">
+              <a href="https://github.com/jesusmondejar" aria-label="GitHub Jesús Mondéjar">
                 <button class="card-socials-btn github">
                   <svg viewBox="0 0 24 24" height="33" width="33" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -67,8 +67,8 @@
                   </svg>
                 </button>
               </a>
-              <a href="https://www.linkedin.com/in/jesus-mondejar/">
-                <button class="card-socials-btn linkedin">
+              <a href="https://www.linkedin.com/in/jesus-mondejar/" aria-label="LinkedIn Jesús Mondéjar">
+                <button class="card-socials-btn linkedin" aria-label="LinkedIn Jesús Mondéjar">
                   <svg height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="m51.326 185.85h90.011v270.872h-90.011zm45.608-130.572c-30.807 0-50.934 20.225-50.934 46.771 0 26 19.538 46.813 49.756 46.813h.574c31.396 0 50.948-20.814 50.948-46.813-.589-26.546-19.551-46.771-50.344-46.771zm265.405 124.209c-47.779 0-69.184 26.28-81.125 44.71v-38.347h-90.038c1.192 25.411 0 270.872 0 270.872h90.038v-151.274c0-8.102.589-16.174 2.958-21.978 6.519-16.174 21.333-32.923 46.182-32.923 32.602 0 45.622 24.851 45.622 61.248v144.926h90.024v-155.323c0-83.199-44.402-121.911-103.661-121.911z">
@@ -81,12 +81,12 @@
 
           <!-- From Uiverse.io by andrew-demchenk0 -->
           <div class="card">
-            <div><img src="assets/img/victor.jpg"></div>
+            <div><img src="assets/img/victor.jpg" alt="Víctor Toledo"></div>
             <div class="card-title">Víctor Toledo <br>
               <span>Co-fundador</span>
             </div>
             <div class="card-socials">
-              <a href="https://github.com/victrtoledo">
+              <a href="https://github.com/victrtoledo" aria-label="GitHub Víctor Toledo">
                 <button class="card-socials-btn github">
                   <svg viewBox="0 0 24 24" height="33" width="33" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -95,7 +95,7 @@
                   </svg>
                 </button>
               </a>
-              <a href="https://www.linkedin.com/in/víctor-toledo-espallardo/">
+              <a href="https://www.linkedin.com/in/víctor-toledo-espallardo/" aria-label="LinkedIn Víctor Toledo">
                 <button class="card-socials-btn linkedin">
                   <svg height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg">
                     <path
